Fixed issue where content was going out of background width.  Made some adjustments to the sections so that all content can be seen without scrolling horizontally on mobile or tablet view.

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .container{
-    max-width: 1140px;
+    max-width: 100%;
     margin: auto;
 }
 /* Header */
@@ -58,7 +58,6 @@ header .navbar ul li a:hover{
     min-height: 100vh;
     background-image: url("developer.jpg");
     background-size: cover;
-    background-position: center;
 }
 
 .home .home-content{
@@ -68,6 +67,7 @@ header .navbar ul li a:hover{
     flex-wrap: wrap;
     align-items: center;
     margin-top: 20%;
+    padding-left: 20px;
 }
 
 .home .home-content .block{
@@ -133,13 +133,13 @@ header .navbar ul li a:hover{
 
 .about-me .about-content .img{
     padding-left: 14px;
+    padding-top: 16px;
     flex:0 0 33.33%;
     max-width: 33.33%;
 }
 
 .about-me .about-content .img img{
     width: 100%;
-    display: block;
 }
 
 .about-me .about-content .text{
@@ -151,6 +151,7 @@ header .navbar ul li a:hover{
 }
 
 .about-me .about-content .text h4{
+    padding-top: 3px;
     font-size: 30px;
     font-weight: 600;
     color: whitesmoke;
@@ -170,20 +171,10 @@ header .navbar ul li a:hover{
     color: whitesmoke;
 }
 
-.about-me .about-content .text .info{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .about-me .about-content .text .info .list{
     flex:0 0 calc(50% - 1%);
     max-width: calc(50% - 1%);
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    border-bottom: 1px solid whitesmoke;
-    padding-bottom: 5px;
+    margin-top: 7px;
 }
 
 .about-me .about-content .text .info .list label{
@@ -191,15 +182,17 @@ header .navbar ul li a:hover{
     color: lightseagreen;
     font-weight: 600;
     font-size: 15px;
+    margin:0;
 }
 
 .about-me .about-content .text .info p{
     padding-top: 0;
     font-size: 15px;
+    margin:0;
 }
 
 .about-me .about-content .text .social-links{
-    padding-top: 15px;
+    padding-top: 4px;
     font-size: 20px;
 }
 
@@ -222,12 +215,8 @@ header .navbar ul li a:hover{
 
 /* Projects */
 .projects{
-    min-height: 80vh;
     background-image: url("background.jpg");
     background-size: cover;
-    background-position: center;
-    padding-bottom: 30px;
-    max-width: 100%;
 }
 
 .projects .section-title{
@@ -247,32 +236,17 @@ header .navbar ul li a:hover{
     border-bottom: 1px solid lightseagreen;
 }
 
-.projects .row .projects-cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .projects .row .projects-cards .list{
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    display: flex;
-    flex-wrap: wrap;
     border: 1px solid rgb(198, 207, 207);
     border-radius: 5px;
+    padding: 50px;
+    margin: 20px;
 }
 
 .projects .row .projects-cards .list a{
     color: whitesmoke;
     font-size: 30px;
     font-weight: 600;
-    text-align: center;
-    box-sizing: border-box;
-    width: 500px;
-    height: 200px;
-    padding-top: 30px;
-    max-width: 100%;
 }
 
 #fishing{
@@ -293,4 +267,10 @@ header .navbar ul li a:hover{
 #dolly{
     background-image: url("dolly.jpg");
     background-size: cover;
+}
+
+#project-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
